# npllm

./: README.md  pyproject.toml
.cursor/rules/: my-python.mdc
agents/: architect.py  github_trending_agent.py
demo/: basic.py  chatbot.py  compilation_directives.py  custom_class.py  custom_dataclass.py  dataclass.py  hello_world.py  llm_compiler.py  self_inspect.py  simple_chatbot.py  type_alias.py
docs/: README_zh.md  all.md  compiler_specification.md  language_extension_specification.md  prompt.md  section_1.md  section_2.md  section_3.md  section_4.md  specification.md  specification_zh.md
my_notebooks/: demo.ipynb  hello.ipynb
notebooks/: demo.ipynb  hello.ipynb  note.ipynb
src/: __init__.py
src/npllm/: __init__.py
src/npllm/agent/: agent_executor.py  executable_agent.py
src/npllm/agent/builtin/: chatbot.py  react_agent.py  web_content_extractor.py
src/npllm/core/: ai.py  annotated_type.py  call_context_provider.py  call_llm.py  call_site.py  call_site_ctx.py  call_site_executor.py  call_site_return_type.py  code_context.py  code_context_provider.py  llm.py  meta_template.py  notebook.py  response_spec.py  return_value_parser.py  runtime_context.py  semantic_call.py  semantic_call_ctx.py  semantic_call_return_type.py  semantic_execute_engine.py  type.py
src/npllm/core/call_site_contexts/: ann_assign_ctx.py  assign_ctx.py  if_ctx.py  return_ctx.py  while_ctx.py
src/npllm/core/call_sites/: ann_assign_call_site.py  assign_call_site.py  if_call_site.py  return_call_site.py  while_call_site.py
src/npllm/core/compilers/: demo_compiler.py
src/npllm/core/execute_engines/: compiler.py
src/npllm/core/executors/: agent_executor.py
src/npllm/core/llm_executor/: compiler.py  llm_executor.py
src/npllm/core/prompts/: system_prompt_template.md  system_prompt_template_no_inspect.md  user_prompt_template.md
src/npllm/utils/: async_util.py  file_util.py  inspect_util.py  json_util.py  module_util.py  notebook_util.py  source_util.py  template_placeholder_util.py
tests/: test_complex_type.py
(+33 files in other folders)
