[project]
name = "npllm"
version = "0.1.2"
description = "No Prompt For LLM"
readme = "README.md"
authors = [
    { name = "renjiyun", email = "wozaijixu@msn.cn" }
]
requires-python = ">=3.10"
dependencies = [
    "json-repair>=0.51.0",
    "jupyterlab>=4.4.7",
    "litellm>=1.77.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/npllm"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "prompt-toolkit>=3.0.52",
    "pytest>=8.4.2",
    "twine>=6.2.0",
]
