[project]
name = "npllm"
version = "0.1.2"
description = "No Prompt For LLM"
readme = "README.md"
authors = [
    { name = "renjiyun", email = "wozaijixu@msn.cn" }
]
requires-python = ">=3.10"
dependencies = [
    "json-repair>=0.51.0",
    "litellm>=1.77.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.11.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/npllm"]

[dependency-groups]
dev = [
]

[tool.pytest.ini_options]
filterwarnings = []
