[project]
name = "npllm"
version = "0.1.2"
description = "No Prompt For LLM"
readme = "README.md"
authors = [
    { name = "renjiyun", email = "wozaijixu@msn.cn" }
]
requires-python = ">=3.10"
dependencies = [
    "json-repair>=0.51.0",
    "litellm>=1.77.1",
    "mcp[cli]>=1.16.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.11.9",
    "jupyterlab>=4.4.9",
    "ipynbname>=2025.8.0.0",
    "rich>=14.1.0",
    "langsmith>=0.4.34",
    "jinja2>=3.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/npllm"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
filterwarnings = []
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers"

[project.scripts]
test = "pytest:main"
